objects/Account__c/fields/Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Opened_Date__c</fullName>
    <description>Specify the date, when this account was opened.</description>
    <inlineHelpText>Specify the date, when this account was opened.</inlineHelpText>
    <label>Opened Date</label>
    <type>Date</type>
</CustomField>