objects/Account__c/fields/Why__c.field-meta.xml
<CustomField>
    <fullName>Why__c</fullName>
    <description>Describe the purpose of this account, why it was opened.</description>
    <inlineHelpText>Describe the purpose of this account, why it was opened.</inlineHelpText>
    <label>Why?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>